--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-*.ui
-*.uo
+*.annot
+*.cmi
+*.cmx
+*.o
+*.omc
 .ditz-config
-Makefile.bak
-run
-run_test
-tests/Lexer.sml
-tests/Parser.output
-tests/Parser.sig
-tests/Parser.sml
+.omakedb
+.omakedb.lock
+src/run
+src/run.opt
+tests/Lexer.ml
+tests/Lexer.mli
+tests/Parser.ml
+tests/Parser.mli
+tests/run_test
+tests/run_test.opt
