Implemented command communication.

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,9 @@ tests/Parser.ml
 tests/Parser.mli
 tests/Parser.output
 tests/list.tmp
+tests/ping
+tests/ping.opt
+tests/pong
+tests/pong.opt
 tests/run_test
 tests/run_test.opt
