Changed a documentation generator from Sphinx to newly created OCaml program.
I don't like htmls generated by Sphinx.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,15 @@
 .ditz-config
 .omakedb
 .omakedb.lock
+doc/*.html
+doc/BlockLexer.ml
+doc/InlineLexer.ml
+doc/Parser.ml
+doc/Parser.mli
+doc/Parser.output
 doc/html
+doc/rst2html
+doc/rst2html.opt
 src/Lexer.ml
 src/Parser.automaton
 src/Parser.ml
